--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "lib": ["ES6", "DOM"], // Add this line
     "paths": {
       "@/*": ["./src/*"]
     }
